@@ -26,7 +26,7 @@ import org.apache.hama.Constants;
  * numbers.
  */
 public class RandomVariable {
-
+  
   /**
    * Generate a random number between 0 and 1.
    * 
@@ -35,6 +35,23 @@ public class RandomVariable {
   public static double rand() {
     double x = Math.random();
     return x;
+  }
+
+  /**
+   * Generate a random number
+   * 
+   * @param density percentage of the non-zero
+   * @return a double 0 or between 0 and 1
+   */
+  public static double rand(int density) {
+    int[] prob = new int[100];
+    double x = Math.random();
+    
+    for(int i = 0; i < density; i++) {
+      prob[i] = 1;
+    }
+
+    return (prob[randInt(0, 99)] == 0) ? 0 : x;
   }
 
   /**
